fix: fix height overflow

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   align-items: center;
-  min-height: 100px;
+  min-height: 60px;
   height: 10vh;
   position: sticky;
   top: 0;
@@ -30,14 +30,15 @@
 
   .headerSubContainer {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    gap: 10px;
     margin: 5px;
   }
 }
 
 .headerAnimated {
   background-color: var(--header-animated-bg-color);
-  min-height: 80px;
+  min-height: 60px;
 
   .headerContainerAnimated {
     justify-content: center;
