--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,25 +10,35 @@ body,
 html {
   font-family: Inter, sans-serif, ui-sans-serif, system-ui, -apple-system, Arial;
   height: 100%;
+  flex-direction: column;
+  display: flex;
+  min-height: 0;
 }
 
 #root {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  flex: 1;
+  height: 100%;
   margin: 0;
+  min-height: 0;
 }
 
 .app {
   display: flex;
   flex-direction: column;
   width: 100%;
+  flex: 1;
+  min-height: 0;
   color: var(--primary-color);
   background: var(--bg-color);
   font: var(--font-m);
 }
 
 .main {
-  min-height: 85vh;
+  min-height: 0;
+  flex: 1;
 }
 
 section {
